# djang-transfer-app

./: README.md
backend/: db.json  db.sqlite3  output.xml  pyproject.toml
backend/djangoapp/: settings.py  urls.py
backend/main/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py  0002_remove_driverresponse_duration.py  0003_alter_driverresponse_unique_together.py  0004_driverresponse_status.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.js  index.js  reducer.js  store.js
frontend/src/components/: MainTitle.js
frontend/src/components/general/: Features.js  FeedbackForm.js  Feedbacks.js
frontend/src/components/header/: DriverMenu.js  Header.js  MainMenu.js  UserMenu.js
frontend/src/components/orders/: NoResponses.js  OrderDetail.js  OrderItem.js  OrdersList.js  Rate.js  RateStars.js
frontend/src/components/profile/: CarInput.js  ProfileInput.js
frontend/src/components/support/: MakeRequest.js  SupportList.js
frontend/src/reducers/: carSlice.js  feedbacksSlice.js  ordersSlice.js  supportSlice.js  userSlice.js
frontend/src/routes/: Main.js
frontend/src/routes/auth/: Authorization.js  Registration.js
frontend/src/routes/driver/: Car.js  OrderRequests.js  Orders.js  ProfileDriver.js  RegisterDriver.js  Request.js
frontend/src/routes/user/: MakeOrder.js  MyOrders.js  Profile.js  Support.js
frontend/src/styles/: elements.css  elements.css.map  elements.scss  index.css  index.css.map  index.scss
