[tool.poetry]
name = "transfer-backend"
version = "0.1.0"
description = ""
authors = ["Valeria Guchustyan <valeria.guch2000@gmail.com>"]
readme = "README.md"
packages = [{include = "transfer_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
Django = "4.2.1"
djangorestframework = "3.14.0"
pytz = "2023.3"
sqlparse = "0.4.4"
tzdata = "2023.3"
django-cors-headers = "^4.0.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
